@@ -4314,6 +4314,16 @@ instances where @env{TEMPDIR} is not respected and so files are left in
 @file{/tmp/boost_interprocess} on some OSes.
 @c macOS is one.
 Default: false (but true for CRAN submission checks).
+
+@item _R_CHECK_BASHISMS_
+Check the top-level scripts @file{configure} (unless generated by
+@file{autoconf}) and @file{cleanup} for non-Bourne-shell code, using the
+Perl script @command{checkbashisms} if available.  This includes
+reporting scripts using the non-portable @code{#! /bin/bash}.
+(Script @command{checkbashisms} is available in most Linux distributions
+and from @uref{https://sourceforge.net/@/projects/@/checkbaskisms/@/files}.)
+Default: false (but true for CRAN submission checks except on Windows).
+
 @end vtable
 
 CRAN's submission checks use something like
@@ -4353,6 +4363,7 @@ _R_CHECK_AUTOCONF_=true
 _R_CHECK_DATALIST_=true
 _R_CHECK_THINGS_IN_CHECK_DIR_=true
 _R_CHECK_THINGS_IN_TEMP_DIR_=true
+_R_CHECK_BASHISMS_=true
 @end example
 
 @noindent
