@@ -1204,6 +1204,56 @@ add_dummies <- function(dir, Log)
             }
         }
 
+        ## checkbashisms skips non-shell scripts, and bash ones with a message.
+        if (config_val_to_logical(Sys.getenv("_R_CHECK_BASHISMS_", "FALSE"))
+            && any(file.exists("configure", "cleanup"))) {
+            if (!nzchar(Sys.which("checkbashisms"))) {
+                if(!any) {
+                    any <- TRUE
+                    warningLog(Log)
+                }
+                printLog0(Log, "A complete check needs the 'checkbashisms' script\n")
+            } else {
+                for (f in c("configure", "cleanup")) {
+                    ## /bin/bash is not portable
+                    if (file.exists(f) &&
+                        grepl("^#! */bin/bash",
+                              readLines(f, 1L, warn = FALSE))) {
+                        if(!any) {
+                            any <- TRUE
+                            msg <- paste0(sQuote(f), ": /bin/bash is not portable")
+                            noteLog(Log, msg)
+                        }
+                    }
+                    ## skip autoconf scripts as checkbashisms warns on system parts
+                    if (file.exists(f) &&
+                        !any(grepl("Generated by GNU Autoconf",
+                                   readLines(f, warn = FALSE)))) {
+                        out <- suppressWarnings(system2("checkbashisms", c("-p -n", f),
+                                       stdout = TRUE, stderr = TRUE,
+                                       timeout = 60))
+                        if (length(out) &&
+                            !any(grepl("could not find any possible bashisms",
+                                       out))) {
+                            ## Skip one report (on two lines)
+                            o <- grep("does not appear to have a #! interpreter line;", out)
+                            if (length(o) && length(out) > o)
+                                out <- out[-(o:(o+1L))]
+                            if (length(out)) {
+                                if(!any) {
+                                    any <- TRUE
+                                    noteLog(Log)
+                                }
+                                printLog0(Log,
+                                          .format_lines_with_indent(out),
+                                          "\n")
+                            }
+                        }
+                    }
+                }
+            }
+        }
+
         if(check_incoming) {
             ## CRAN must be able to convert
             ##   inst/README.md or README.md
@@ -5962,6 +6012,7 @@ add_dummies <- function(dir, Log)
                        "package:_R_CHECK_PACKAGE_NAME_,verbose")
         Sys.setenv("_R_CHECK_CODOC_VARIABLES_IN_USAGES_" = "TRUE")
         Sys.setenv("_R_CHECK_DATALIST_" = "TRUE")
+        if(!WINDOWS) Sys.setenv("_R_CHECK_BASHISMS_" = "TRUE")
         R_check_vc_dirs <- TRUE
         R_check_executables_exclusions <- FALSE
         R_check_doc_sizes2 <- TRUE
